Make POST '/videos' render error message when video title is empty

--- a/views/videos/create.handlebars
+++ b/views/videos/create.handlebars
@@ -4,6 +4,7 @@
 <div>
   <form method="post" action="/videos">
     <input type="text" id="title-input" name="title" placeholder="Title"/>
+    <span>{{error}}</span>
     <input type="text" id="videoUrl-input" name="videoUrl" placeholder="Video URL"/>
     <textarea id="description-input" name="description" placeholder="Description"></textarea>
     <button type="submit" id="submit-button">Save video</button>
