Add video.description to the view

--- a/views/videos/create.handlebars
+++ b/views/videos/create.handlebars
@@ -8,7 +8,7 @@
     <span>{{error}}</span>
     {{/if}}
     <input type="text" id="videoUrl-input" name="videoUrl" placeholder="Video URL"/>
-    <textarea id="description-input" name="description" placeholder="Description"></textarea>
+    <textarea id="description-input" name="description" placeholder="Description">{{video.description}}</textarea>
     <button type="submit" id="submit-button">Save video</button>
   </form>
 </div>
