--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -4,7 +4,7 @@
     <div class="video-title">
       {{video.title}}
     </div>
-    <iframe class="video-player" src="http://example.com" frameborder="0" allowfullscreen></iframe>
+    <iframe class="video-player" src="{{video.videoUrl}}" frameborder="0" allowfullscreen></iframe>
   </div>
   {{/each}}
 </div>
