--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -1,3 +1,14 @@
-<h1>{{video.title}}</h1>
-<iframe src="{{video.videoUrl}}"/>
-<p>{{video.description}}</p>
+<div class="contents-container">
+  <div class="video-card">
+
+    <div class="video-title">
+      <h1>{{video.title}}</h1>
+    </div>
+
+    <iframe class="video-player" src="{{video.videoUrl}}" allowfullscreen></iframe>
+
+    <div class="video-description">
+      <p>{{video.description}}</p>
+    </div>
+  </div>
+</div>
