Add 'Edit' button on show.handlebars

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -1,4 +1,11 @@
 <div class="contents-container">
+
+  <a id="edit" href="/videos/{{video._id}}/edit">
+    <div class="add-video-button">
+      <p>Update</p>
+    </div>
+  </a>
+
   <div class="video-card">
 
     <div class="video-title">
