--- a/views/videos/update.handlebars
+++ b/views/videos/update.handlebars
@@ -2,7 +2,7 @@
     <h2>Update Video</h2>
 </div>
 <div>
-  <form method="post" action="/videos">
+  <form method="post" action="/videos/{{video._id}}/updates">
     <input type="text" id="title-input" name="title" placeholder="Title" value="{{video.title}}"/>
     {{#if video.errors.title}}
     <span>{{video.errors.title.message}}</span>
