Refactor views: Set buttons' class to 'input-button'

--- a/views/videos/create.handlebars
+++ b/views/videos/create.handlebars
@@ -12,6 +12,6 @@
     {{/if}}
     <input type="text" id="videoUrl-input" name="videoUrl" placeholder="Video URL" value="{{video.videoUrl}}"/>
     <textarea id="description-input" name="description" placeholder="Description">{{video.description}}</textarea>
-    <button type="submit" id="submit-button">Save video</button>
+    <button type="submit" id="submit-button" class="input-button">Save video</button>
   </form>
 </div>
