--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -9,8 +9,8 @@
   {{/each}}
 </div>
 
-<a href="/videos/create.html">
-  <div class="add-video-button">
+<a href="/videos/create.html" class="add-video-button">
+  <div>
     <p>Add Video</p>
   </div>
 </a>
