--- a/views/videos/update.handlebars
+++ b/views/videos/update.handlebars
@@ -12,6 +12,6 @@
     <span>{{video.errors.videoUrl.message}}</span>
     {{/if}}
     <textarea id="description-input" name="description" placeholder="Description">{{video.description}}</textarea>
-    <button type="submit" id="submit-button">Update video</button>
+    <button type="submit" id="submit-button" class="input-button">Update video</button>
   </form>
 </div>
