--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -1,7 +1,7 @@
 <div class="contents-container">
 
-  <a id="edit" href="/videos/{{video._id}}/edit">
-    <div class="add-video-button">
+  <a id="edit" href="/videos/{{video._id}}/edit"  class="input-button">
+    <div>
       <p>Update</p>
     </div>
   </a>
