Add 'Delete' button to video's show page

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -6,6 +6,12 @@
     </div>
   </a>
 
+  <a id="delete" href="/videos/{{video._id}}/deletions"  class="input-button">
+    <div>
+      <p>Delete</p>
+    </div>
+  </a>
+
   <div class="video-card">
 
     <div class="video-title">
