--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -6,11 +6,9 @@
     </div>
   </a>
 
-  <a id="delete" href="/videos/{{video._id}}/deletions"  class="input-button">
-    <div>
-      <p>Delete</p>
-    </div>
-  </a>
+  <form method="post" action="/videos/{{video._id}}/deletions">
+    <button type="submit" class="input-button" id="delete">Delete</delete>
+  </form>
 
   <div class="video-card">
 
