--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <h2>Log in</h2>
-<form>
+<form method="post" action="/login">
   <input type="text" name="user" placeholder="User name"/>
   <input type="password" name="password" placeholder="Password"/>
+  <button type="submit">Log in</button>
 </form>
