--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,5 +5,5 @@
   {{/if}}
   <input type="text" name="user" placeholder="User name"/>
   <input type="password" name="password" placeholder="Password"/>
-  <button type="submit">Log in</button>
+  <button type="submit" id="log-in">Log in</button>
 </form>
