Make the view display the log in link only when the user is not logged in

--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -16,8 +16,10 @@
   </div>
 </a>
 
+{{#unless session.user}}
 <a href="/login" class="input-button">
   <div>
     <p>Log in</p>
   </div>
 </a>
+{{/unless}}
