Make index page dynamically display username from session

--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -1,4 +1,4 @@
-admin
+{{session.user}}
 <div class="contents-container" id="videos-container">
   {{#each videos as |video|}}
   <div class="video-card">
