Add 'Log out' link on index page

--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -1,4 +1,4 @@
-{{session.user}}
+{{session.user}}, <a href="/logout">Log out</a>
 <div class="contents-container" id="videos-container">
   {{#each videos as |video|}}
   <div class="video-card">
