Display 'log out' link only when user is logged in

--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -1,4 +1,6 @@
+{{#if session.user}}
 {{session.user}}, <a href="/logout">Log out</a>
+{{/if}}
 <div class="contents-container" id="videos-container">
   {{#each videos as |video|}}
   <div class="video-card">
