Refactor: Move conditional rendering of username and log in/out links to app.handlebars

--- a/views/layouts/app.handlebars
+++ b/views/layouts/app.handlebars
@@ -14,7 +14,13 @@
         </a>
       </div>
     </div>
+    {{#if session.user}}
+      {{session.user}}, <a href="/logout">Log out</a>
+    {{else}}
+      <a href="/login">Log in</a>
+    {{/if}}
 
     {{{ body }}}
+
   </body>
 </html>
