Refactor: prevent login page from using the default layout

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,29 @@
-<h2>Log in</h2>
-<form method="post" action="/login">
-  {{#if error}}
-  <span>{{error}}</span>
-  {{/if}}
-  <input type="text" name="user" placeholder="User name"/>
-  <input type="password" name="password" placeholder="Password"/>
-  <button type="submit" id="log-in">Log in</button>
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>VidBits</title>
+    <link rel="icon" type="image/ico" href="/img/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+  </head>
+  <body>
+    <div class="title-container">
+      <div class="title-logo">
+        <a href="/" title="VidBits">
+          <img src="/img/logo.svg" alt="VidBits">
+        </a>
+      </div>
+    </div>
+
+    <h2>Log in</h2>
+    <form method="post" action="/login">
+      {{#if error}}
+      <span>{{error}}</span>
+      {{/if}}
+      <input type="text" name="user" placeholder="User name"/>
+      <input type="password" name="password" placeholder="Password"/>
+      <button type="submit" id="log-in">Log in</button>
+    </form>
+
+  </body>
+</html>
