Render 'Add Video' button for unauthenticated users only

--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -9,8 +9,10 @@
   {{/each}}
 </div>
 
+{{#if session.user}}
 <a href="/videos/create.html" class="add-video-button">
   <div>
     <p>Add Video</p>
   </div>
 </a>
+{{/if}}
