--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -1,6 +1,7 @@
 <div class="contents-container">
 
   <div class="video-card">
+    {{#if session.user}}
     <form action="/videos/{{video._id}}/edit" method="get">
       <button type="submit" class="input-button" id="edit">Update</button>
     </form>
@@ -8,6 +9,7 @@
     <form method="post" action="/videos/{{video._id}}/deletions">
       <button type="submit" class="input-button" id="delete">Delete</button>
     </form>
+    {{/if}}
 
     <div class="video-title">
       <h1>{{video.title}}</h1>
