Add user credentials list on login page for the benefit of the reviewers

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,5 +25,15 @@
       <button type="submit" id="log-in" class="input-button">Log in</button>
     </form>
 
+    <div>
+      <p>For the purpose of testing, login with one of the following accounts:</p>
+        <b><i>&lt;username: password&gt;</i></b><br>
+        root : rootpassword<br/>
+        admin : password<br/>
+        jp : jppassword<br/>
+        cathy : cathypassword<br/>
+        king : kingpassword<br/>
+    </div>
+
   </body>
 </html>
