Render comment validation error message to view

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -30,6 +30,7 @@
     {{/each}}
     <form method="post" action="/videos/{{video._id}}/comments" class="comment-form">
       <input type="text" name="commenter" placeholder="Your Name"/>
+      <span>{{commentError}}</span>
       <textarea name="comment" placeholder="Your comment"></textarea>
       <button type="submit" id="post-comment" class="input-button">Post</button>
     </form>
