Make the view display the commenter

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -29,7 +29,7 @@
     </div>
     {{/each}}
     <form method="post" action="/videos/{{video._id}}/comments" class="comment-form">
-      <input type="text" name="commenter" placeholder="Your Name"/>
+      <input type="text" name="commenter" placeholder="Your Name" value="{{comment.commenter}}"/>
       <span>{{commentError}}</span>
       <textarea name="comment" placeholder="Your comment"></textarea>
       <button type="submit" id="post-comment" class="input-button">Post</button>
